--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,36 @@
 h1 {
-  color: aqua;
+  color: rgb(14, 146, 146);
+}
+
+label {
+  text-align: center;
+  font-size: large;
+}
+
+.must {
+  color: red;
+}
+
+#overlay{
+  /*　画面全体を覆う設定　*/
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color: #282c34;
+
+    /*　画面の中央に要素を表示させる設定　*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#contents{
+  z-index:2;
+  width:50%;
+  padding: 1em;
+  background:#fff;
 }
 
 .App {
